RESOLVED FIXED 255053
[PlayStation] Fix build after 262631@main
https://bugs.webkit.org/show_bug.cgi?id=255053
Summary [PlayStation] Fix build after 262631@main
Basuke Suzuki
Reported 2023-04-05 14:23:36 PDT
Build break with SERVICE WORKER disabled.
Attachments
EWS
Comment 1 2023-04-05 15:14:13 PDT
Committed 262638@main (59318ce6feee): <https://commits.webkit.org/262638@main> Reviewed commits have been landed. Closing PR #12429 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-04-05 15:15:19 PDT
Note You need to log in before you can comment on or make changes to this bug.