[PlayStation] Fix build after 262631@main https://bugs.webkit.org/show_bug.cgi?id=255053

Unreviewed build fix.

Service worker code was used without enable guard.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::storeServiceWorkerRegistrations):

Canonical link: https://commits.webkit.org/262638@main